fix: add swagger doc for auths and public projects
