# app/Http/Controllers/API/Auth/LoginController.php
@@ -10,6 +10,36 @@ use Illuminate\Support\Facades\Auth;
 
 class LoginController extends Controller
 {
+    /**
+     * @OA\Post(
+     * path="/api/v1/auth/login",
+     * summary="Sign in",
+     * description="Login by email and password",
+     * operationId="authLogin",
+     * tags={"auth"},
+     *
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Pass user credentials",
+     *
+     *    @OA\JsonContent(
+     *       required={"email","password"},
+     *
+     *       @OA\Property(property="email", type="string", format="email", example="nisha.sharma@email.com"),
+     *       @OA\Property(property="password", type="string", format="password", example="secret1234"),
+     *    ),
+     * ),
+     *
+     * @OA\Response(
+     *    response=200,
+     *    description="Successful Operation",
+     *  ),
+     * @OA\Response(
+     *    response=401,
+     *    description="Wrong Credentials Response",
+     *  ),
+     *  )
+     */
     public function login(Request $request): JsonResponse
     {
         if (! Auth::attempt($request->only('email', 'password'))) {
@@ -28,6 +58,19 @@ class LoginController extends Controller
         ]);
     }
 
+    /**
+     *  @OA\Get(
+     *      path="/api/v1/auth/logout",
+     *      summary="Sign out",
+     *      tags={"auth"},
+     *      security={{"sanctum":{}}},
+     *
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation"
+     *      ),
+     *  )
+     */
     public function logout(Request $request): JsonResponse
     {
         $request->user()->currentAccessToken()->delete();
